--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -3,6 +3,6 @@ Django==4.1.3
 django-cors-headers==3.13.0
 django-environ==0.9.0
 djangorestframework==3.14.0
-psycopg2==2.9.5
+psycopg2-binary==2.9.5
 pytz==2022.6
 sqlparse==0.4.3
