--- a/backend/Procfile
+++ b/backend/Procfile
@@ -1,1 +1,2 @@
-web: gunicorn --bind :8000 --workers 3 --threads 2 project.wsgi:application
+web: gunicorn --bind :5000 --workers 3 --threads 2 backend.wsgi:application
+
