--- a/backend/Procfile
+++ b/backend/Procfile
@@ -1,2 +1,2 @@
-web: gunicorn --bind :5000 --workers 3 --threads 2 backend.wsgi:application
+web: gunicorn --bind :$PORT --workers 3 --threads 2 backend.wsgi:application
 
